Fix color contrast

--- a/src/assets/css/partials/components.pcss
+++ b/src/assets/css/partials/components.pcss
@@ -312,13 +312,12 @@ img.emoji {
     border-radius: 0.25rem;
     transition: border-radius var(--base-transition-duration) ease-in,
       background-color var(--base-transition-duration) ease-in;
-    color: var(--background-1);
+    color: #18181b;
     font-size: var(--font-size-sm);
     text-decoration: none;
 
     &:hover {
       text-decoration: underline;
-      border-radius: 0.75rem 0.25rem;
     }
   }
 }
